5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1582_1329.log
== SUBMITION (2019-03-14 17:48:34) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.165173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:41) 
-- CODE:
primt(180/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:48:43) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.185118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:20) 
-- CODE:
primt(180/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:49:21) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.281512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:36) 
-- CODE:
primt(180?4)
-- ERROR:
File "XXXX", line 1
    primt(180?4)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:49:41) 
-- CODE:
primt(180/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:49:42) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.150392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:04:17) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.126833
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:04:18) 
-- CODE:
primt(180/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:04:20) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.208278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:05:32) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.121117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:05:33) 
-- CODE:
primt(180/4)
-- EXECUTION TIME:
0.136244
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1329/main.py", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:05:34) 
-- CODE:
primt(180/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    primt(180/4)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:05:45) 
-- CODE:
print(180/4)
-- EXECUTION TIME:
0.140257
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
